fix white space

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
+html,
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
   overflow-x: hidden;
 }
 
@@ -59,6 +59,10 @@ section {
 
   .header-name {
     text-align: center !important;
+  }
+
+  .header-image {
+    display: none;
   }
 }
 
